--- a/navigation.html
+++ b/navigation.html
@@ -15,6 +15,7 @@
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
+			<li><a href="#"><font color="red">Logout</font></a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
